[tool.poetry]
name = "streamlit-insta-captioner"
version = "0.1.0"
description = "Google-Gemini based Instagram Post Captioner"
authors = ["Merbin J Anselm <merbinjanselm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"
python-dotenv = "^1.0.1"
streamlit-oauth = "^0.1.8"
google-generativeai = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
